--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SecondFragment">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_marginTop="60dp"
         android:text="פעולות"
         android:textColor="@color/general_text"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -195,5 +197,21 @@
         app:layout_constraintEnd_toEndOf="@+id/img_wake_up"
         app:layout_constraintStart_toStartOf="@+id/img_wake_up"
         app:layout_constraintTop_toBottomOf="@+id/img_wake_up" />
+
+    <Button
+        android:id="@+id/btn_back"
+        android:layout_width="150dp"
+        android:layout_height="66dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/white"
+        android:backgroundTintMode="add"
+        android:text="@string/back_btn"
+        android:textColor="@color/general_text"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
